--- a/rdatascience-notebook/Dockerfile
+++ b/rdatascience-notebook/Dockerfile
@@ -1,6 +1,6 @@
 # Copyright (c) Jupyter Development Team.
 # Distributed under the terms of the Modified BSD License.
-ARG BASE_CONTAINER=jupyter/scipy-notebook
+ARG BASE_CONTAINER=jupyter/r-notebook
 FROM $BASE_CONTAINER
 
 LABEL maintainer="Choppy Team <pgx@fudan.edu.cn>"
@@ -19,9 +19,9 @@ RUN $CONDA_DIR/bin/conda config --system --prepend channels bioconda
 # Change conda environment path
 RUN echo 'export CONDA_ENVS_PATH=/home/jovyan/.conda/envs' >> /etc/bashrc
 
-# Add python packages that you wanted
+# Add r packages that you wanted
 RUN conda install --quiet --yes \
-    'plotly=4.3.*' \
+    'bioconductor-maftools=2.2.*' \
     && \
     conda clean --all -f -y && \
     fix-permissions $CONDA_DIR && \
