--- a/.github/workflows/build-mldatascience-notebook.yaml
+++ b/.github/workflows/build-mldatascience-notebook.yaml
@@ -1,8 +1,8 @@
-name: Build & Publish Docker Image
+name: Build & Publish Docker Image of mldatascience-notebook
 
 on:
   push:
-    branches:    
+    tags:
       - v*
 
 jobs:
