--- a/.github/workflows/build-pydatascience-notebook.yaml
+++ b/.github/workflows/build-pydatascience-notebook.yaml
@@ -1,8 +1,8 @@
-name: Build & Publish Docker Image
+name: Build & Publish Docker Image of pydatascience-notebook
 
 on:
   push:
-    branches:    
+    tags:    
       - v*
 
 jobs:
