--- a/.github/workflows/build-mldatascience-notebook.yaml
+++ b/.github/workflows/build-mldatascience-notebook.yaml
@@ -4,6 +4,8 @@ on:
   push:
     tags:
       - v*
+    paths:
+      - 'mldatascience-notebook/*'
 
 jobs:
   build:
@@ -12,14 +14,13 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@master
-      with:
-        path: mldatascience-notebook
 
     - name: Configure environment
       id: config
       run: |
         VERSION=`cat VERSION`
         echo ::set-output name=version::$VERSION
+      working-directory: mldatascience-notebook
 
     - name: Publish docker
       id: docker
@@ -29,6 +30,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: mldatascience-notebook
         tag: ${{ steps.config.outputs.version }}
+        subdir: mldatascience-notebook
 
     - name: Print the name of built image
       run: echo "${{steps.docker.outputs.image}}"
