--- a/.github/workflows/build-mldatascience-notebook.yaml
+++ b/.github/workflows/build-mldatascience-notebook.yaml
@@ -28,7 +28,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: mldatascience-notebook
+        repository: choppydocker/mldatascience-notebook
         tag: ${{ steps.config.outputs.version }}
         subdir: mldatascience-notebook
 
