--- a/.github/workflows/build-pydatascience-notebook.yaml
+++ b/.github/workflows/build-pydatascience-notebook.yaml
@@ -28,7 +28,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: pydatascience-notebook
+        repository: choppydocker/pydatascience-notebook
         tag: ${{ steps.config.outputs.version }}
         subdir: pydatascience-notebook
 
