--- a/.github/workflows/build-rdatascience-notebook.yaml
+++ b/.github/workflows/build-rdatascience-notebook.yaml
@@ -28,7 +28,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: rdatascience-notebook
+        repository: choppydocker/rdatascience-notebook
         tag: ${{ steps.config.outputs.version }}
         subdir: rdatascience-notebook
 
