--- a/rdatascience-notebook/Dockerfile
+++ b/rdatascience-notebook/Dockerfile
@@ -23,6 +23,54 @@ RUN $CONDA_DIR/bin/conda config --system --prepend channels bioconda
 RUN conda install --quiet --yes \
     'cookiecutter' \
     'bioconductor-maftools=2.2.*' \
+    'r-dplyr=0.8.*'\
+    'r-ggplot2=3.1.*'\
+    'r-glmnet=2.*'\
+    'r-survival=2.4*'\
+    'r-survminer=0.4.*'\
+    'r-dplyr=0.8.*'\
+    'bioconductor-complexheatmap=2.2.*'\
+    'r-circlize=0.4.*'\
+    'r-survivalroc=1.0.*'\
+    'bioconductor-clusterprofiler=3.14.*'\
+    'bioconductor-survcomp=1.36.*'\
+    'r-rms=5.*'\
+    'r-e1071=1.*'\
+    'r-reshape2=1.4.*'\
+    'r-plot3d=0.3*'\
+    'bioconductor-sva=3.34.*'\
+    'r-factominer=2.0*'\
+    'r-factoextra=1.0.*'\
+    'bioconductor-copynumber=1.26*'\
+    'r-mcpcounter=1.1*'\
+    'r-forestplot=1.9*'\
+    'r-comparec=1.3*'\
+    'r-circlize=0.4.*'\
+    'bioconductor-affy=1.64.*'\
+    'bioconductor-limma=3.42.*'\
+    'bioconductor-impute=1.60*'\
+    'bioconductor-geoquery=2.54*'\
+    'r-gridgraphics=0.4*'\
+    'r-ggpubr=0.2.*'\
+    'r-data.table=1.12.*'\
+    'r-wgcna=1.68*'\
+    'bioconductor-mygene=1.22*'\
+    'r-annotables=v0.1.*'\
+    'bioconductor-pathview=1.26*'\
+    'r-sp=1.2*'\
+    'r-sf=0.8*'\
+    'r-ggiraph=0.7*'\
+    'r-scatterplot3d=0.3*'\
+    'r-base=3.6.*'\
+    'r-dendextend=1.12*'\
+    'r-colorspace=1.4*'\
+    'r-ggcorrplot=0.1.*'\
+    'r-ggdendro=0.1*'\
+    'r-gplots=3.0.*'\
+    'r-gmodels=2.18.*'\
+    'r-survrm2=1.0*'\
+    'r-nmf=0.21*'\
+    'bioconductor-biomart=2.42.*'\
     && \
     conda clean --all -f -y && \
     fix-permissions $CONDA_DIR && \
