--- a/.github/workflows/build-rdatascience-notebook.yaml
+++ b/.github/workflows/build-rdatascience-notebook.yaml
@@ -2,8 +2,10 @@ name: Build & Publish rdatascience-notebook Docker Image
 
 on:
   push:
-    tags:
-      - v*
+    branches:
+      - master 
+    paths:
+      - 'rdatascience-notebook/VERSION'
 
 jobs:
   build:
