--- a/.github/workflows/build-mldatascience-notebook.yaml
+++ b/.github/workflows/build-mldatascience-notebook.yaml
@@ -2,8 +2,10 @@ name: Build & Publish mldatascience-notebook Docker Image
 
 on:
   push:
-    tags:
-      - v*
+    branches:    
+      - master
+    paths:
+      - 'mldatascience-notebook/VERSION'
 
 jobs:
   build:
