[Fix Bug] The identifier 'docker' may not be used more than once within the same scope.

--- a/.github/workflows/build-pydatascience-notebook.yaml
+++ b/.github/workflows/build-pydatascience-notebook.yaml
@@ -24,8 +24,8 @@ jobs:
         echo ::set-output name=version::$VERSION
       working-directory: pydatascience-notebook
 
-    - name: Test docker
-      id: test-docker
+    - name: Publish docker
+      id: docker-dev
       uses: yjcyxky/docker-action@master
       if: github.ref == 'refs/heads/dev'
       with:
